--- a/card-game/src/app/champion/champion.component.scss
+++ b/card-game/src/app/champion/champion.component.scss
@@ -4,95 +4,86 @@
     margin: 5px;
     display: inline-block;
     vertical-align: text-top;
+    background: #2e2c44;
+    color: white;
 }
 
 .name{
-    margin-bottom: 2px;
+    margin-bottom: 10px;
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 1;
+    height: 28px;
 }
 
 span.ability{
     margin-right:15px;
 }
 
-.hp{
-    position: absolute;
-    font-size: 14px;
-    right: 15px;
-    top: 16px;
-    color: #7a1027;
+.healthbar {
+    background-color: #e6490d;
 }
 
-.hp.orange{
-    color: #975415;
+.healthbar.orange {
+    background-color: #e6990d;
 }
 
-.hp.yellow{
-    color: #6d7500;
+.healthbar.yellow {
+    background-color: #afbf25;
 }
 
-.hp.green{
-    color: #097028;
+.healthbar.green {
+    background-color: #1aa744;
+}
+
+.healthbar-container{
+    width: 100%;
+    background-color: #252338;
+    height: 20px;
+    border-radius: 3px;
+    border: 3px solid #252338;
 }
 
 .healthbar{
+    height: 20px;
     margin-bottom: 20px;
+    float:left;
+    border-radius: 3px 0px 0px 3px;
 }
 
-.healthbar ::ng-deep .mat-progress-bar-fill::after {
-    background-color: #7a1027;
+.healthbar-healing{
+    background-color: #2bff0065;
+    height: 20px;
+    float: right;
 }
 
-.healthbar.orange ::ng-deep .mat-progress-bar-fill::after {
-    background-color: #975415;
+.healthbar-damage{
+    background-color: #ff3a0065;
+    height: 20px;
+    float: left;
 }
 
-.healthbar.yellow ::ng-deep .mat-progress-bar-fill::after {
-    background-color: #6d7500;
-}
-
-.healthbar.green ::ng-deep .mat-progress-bar-fill::after {
-    background-color: #097028;
-}
-
-::ng-deep .mat-progress-bar-background {
-    fill: none;
-}
-
-::ng-deep .mat-progress-bar-buffer {
-    background: #00000030;
-}
-
-::ng-deep .mat-progress-bar {
-    border-radius: 2px;
-}
-
-.power{
+.healthnumber{
+    left: 50%;
+    position: absolute;
+    margin-left: -10px;
     font-size: 12px;
 }
 
-.picked{
-    box-shadow:0px 0px 0px 2px rgb(245, 179, 58) inset;
-}
-
-.pickedAbility{
-    color: rgb(189, 140, 33);
-    text-decoration: underline;
-}
-
-.onCooldown{
-    color: #00000050;
-}
-
-.status{
-    font-size: 10px;
-}
-
 .target{
-    box-shadow:0px 0px 0px 2px rgb(187, 28, 28) inset;
+    box-shadow:0px 0px 0px 3px #bb1c1c inset;
 }
 
 .dead{
-    background-color:#540517;
+    background-color:#151321;
+    color:#ffffff30;
+    span, p{
+        background-color: #12101d;
+        color: #ffffff30;
+    }
+    h2{
+        color: #ffffff30;
+    }
 }
 
 .tooltip{
@@ -118,12 +109,12 @@ span.ability{
         color: #30b6a4;
     }
     .attack{
-        color: rgb(206, 55, 55);
+        color: rgb(238, 71, 71);
     }
     .block{
         color: rgb(44, 144, 226);
     }
-    .interrupt{
+    .cancel{
         color: rgb(202, 63, 133);
     }
 
@@ -138,34 +129,74 @@ span.ability{
     }
 }
 
+.stats{
+    padding: 3px 9px;
+    background-color: #252235;
+    color: #ffffff50;
+    border-radius: 2px;
+    margin-bottom: 15px;
+    margin-right: 6px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
 .level{
-    padding: 3px 5px;
-    background-color: #eaeaea;
-    border-radius: 2px;
-    margin-bottom: 7px;
-    display: inline-block;
-}
-
-.weapon{
-    padding: 3px 5px;
-    background-color: #d5d4e2;
-    border-radius: 2px;
-    margin-bottom: 7px;
-    display: inline-block;
-    color: #00000050;
-}
-
-.ability{
-    padding: 3px 5px;
-    background-color: #d9e1e8;
-    border-radius: 2px;
-    margin-bottom: 7px;
-    display: inline-block;
+    color: black;
+    background-color: #595771;
+    margin-bottom: 15px;
+    margin-right: 15px;
 }
 
 .level.dinged{
     background-color: #ffbc00;
     cursor: pointer;
+}
+
+.weapon{
+    padding: 3px 8px;
+    background-color: #1d1a2d;
+    border-radius: 2px;
+    margin-bottom: 7px;
+    display: inline-block;
+    color: #ffffff70;
+}
+
+.attacking{
+    color: white;
+    background-color: #d44a4a;
+}
+
+.ability{
+    padding: 3px 8px;
+    background-color: #1d1a2d;
+    color: white;
+    border-radius: 2px;
+    margin-bottom: 7px;
+    display: inline-block;
+    margin-right: 7px;
+}
+
+.pickable{
+    cursor: pointer;
+}
+
+.picked{
+    box-shadow:0px 0px 0px 3px #ffbc00 inset;
+}
+
+.pickedAbility{
+    background-color: #ffbc00;
+}
+
+.onCooldown{
+    color: #ffffff40;
+    cursor: not-allowed;
+    text-decoration: none;
+    background-color: #1d1a2d;
+}
+
+.status{
+    font-size: 10px;
 }
 
 .showPicksBackground{
@@ -180,13 +211,28 @@ span.ability{
 
 .showPicks{
     position: fixed;
-    top: 30%;
-    width: 500px;
-    margin: 0 auto;
+    top: 50%;
+    margin-top:-200px;
+    width: 800px;
     left: 50%;
-    margin-left: -200px;
+    margin-left: -400px;
     background-color: #12101df6;
     border: 4px solid black;
     padding: 15px;
     z-index: 100;
+
+    .pickIndicator{
+        background-color: #302e3e;
+        padding: 10px;
+        padding-bottom: 3px;
+        display: inline-block;
+        border-radius: 2px;
+    }
+
+    .active{
+        box-shadow:0px 0px 0px 2px #ffbc00 inset;
+        .ability{
+            cursor: pointer;
+        }
+    }
 }
