--- a/card-game/src/app/game/game.component.html
+++ b/card-game/src/app/game/game.component.html
@@ -1,30 +1,24 @@
 
-<div *ngIf="game != null" class="game_container">
-    <div class="guide_container">
-        <ng-container *ngIf="game.turnstate === 'PICKING'">
-            <h2 *ngIf="game.myAbility === null">Pick an ability</h2>
-            <h2 *ngIf="game.myAbility != null">Waiting..</h2>
-        </ng-container>     
-        
-        <ng-container *ngIf="game.turnstate === 'TARGETING'">
-            <h2 *ngIf="game.myAbilityResult != null && game.myTarget === null">Pick a {{ game.myAbilityResult.targetType}} target</h2>
-            <h2 *ngIf="game.myAbilityResult === null">Waiting..</h2>
-        </ng-container>
-    </div>
-
-    <!-- TODO: ACTIONS Component -->
-    <div class="actions_container">
-        <p><span>Up next: </span><span *ngFor="let boardChampion of game.readyChampions; index as i; let last = last">{{boardChampion.champion.name}}<span *ngIf="!last">, </span> </span></p>
-        <p *ngFor="let log of game.gameLog">{{log}}</p>
-    </div>
-    
+<div *ngIf="game != null" class="game_container">  
     <div class="board_container">
         <div class="board_side">
-            <h2>{{game.opponentsName}}'s team</h2>
+            <h2>Team {{ game.opponentPlayerSide }} ({{game.opponentsName}})</h2>
             <ng-container *ngFor="let boardChampion of game.opponentsBoard; index as i" >
                 <app-champion (cardClicked)="cardClicked(boardChampion.boardChampionId, $event)"
                 [boardChampion]="boardChampion" 
                 [target]="boardChampion.boardChampionId === game.myTarget"></app-champion>
+            </ng-container>
+        </div>
+
+        <div class="guide_container">
+            <ng-container *ngIf="game.turnstate === 'PICKING'">
+                <h2 *ngIf="game.myAbility === null">Pick an ability</h2>
+                <h2 *ngIf="game.myAbility != null">Waiting..</h2>
+            </ng-container>     
+            
+            <ng-container *ngIf="game.turnstate === 'TARGETING'">
+                <h2 *ngIf="game.myAbilityResult != null && game.myTarget === null">Pick a {{ game.myAbilityResult.targetType}} target</h2>
+                <h2 *ngIf="game.myAbilityResult === null">Waiting..</h2>
             </ng-container>
         </div>
 
@@ -39,11 +33,16 @@
 
             <ng-container *ngFor="let boardChampion of game.myBoard; index as i" >
                 <app-champion (cardClicked)="cardClicked(boardChampion.boardChampionId, $event)" 
-            [boardChampion]="boardChampion" [gameId]="id" [playerId]="playerId" [pickedAbility]="boardChampion.boardChampionId === game.myUsedChampion ? game.myAbility.name : null "></app-champion>
+            [boardChampion]="boardChampion" [gameId]="id" [playerId]="playerId" [pickedAbility]="boardChampion.boardChampionId === game.myUsedChampion ? game.myAbility.ability.name : null "></app-champion>
             </ng-container>
-            <h2>My team</h2>
-            <button *ngIf="game.turnstate === 'PICKING'" mat-raised-button (click)="passTurn()">Pass turn</button>
+            <button class="pass-button" *ngIf="game.turnstate === 'PICKING'" mat-raised-button (click)="passTurn()">Pass turn</button>
+            <br/><br/>
+            <h2>Team {{ game.myPlayerSide }} (My team)</h2>
         </div>     
+    </div>
+
+    <div class="actions_container">
+        <p *ngFor="let log of game.gameLog">{{log}}</p>
     </div>
 
 </div>
